<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/titleTableRadinGroupTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radin_group_table_activity_title"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/RID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTableRadinGroupTest"
            android:hint="@string/rid" />

        <EditText
            android:id="@+id/RGCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RID"
            android:hint="@string/rg_creation_date_hint" />

        <EditText
            android:id="@+id/RGDeletedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RGCreatedAt"
            android:hint="@string/rg_deletion_date_hint" />

        <EditText
            android:id="@+id/RGEndedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RGDeletedAt"
            android:hint="@string/rg_end_date_hint" />

        <EditText
            android:id="@+id/RGName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RGEndedAt"
            android:hint="@string/rg_name_hint" />

        <EditText
            android:id="@+id/RGAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RGName"
            android:hint="@string/rg_avatar_hint" />

        <EditText
            android:id="@+id/RGMasterID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RGAvatar"
            android:hint="@string/rg_master_id_hint" />

        <EditText
            android:id="@+id/RGDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RGMasterID"
            android:hint="@string/rg_description_hint" />

        <Button
            android:id="@+id/submitRadinGroupToDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RGDescription"
            android:text="@string/create_radin_group" />
    </RelativeLayout>

</ScrollView>