<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.radin.HomeActivity" >

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="100sp" />

    <Button
        android:id="@+id/myRadinGroupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeTitle"
        android:text="@string/my_radingroups" />

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeTitle"
        android:layout_toRightOf="@id/myRadinGroupBtn"
        android:text="@string/profile" />

    <Button
        android:id="@+id/notificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myRadinGroupBtn"
        android:text="@string/notifications" />

    <Button
        android:id="@+id/contactsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myRadinGroupBtn"
        android:layout_toRightOf="@id/notificationBtn"
        android:text="@string/contacts" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationBtn"
        android:text="@string/settings" />

    <Button
        android:id="@+id/overviewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationBtn"
        android:layout_toRightOf="@id/settingsBtn"
        android:text="@string/overview" />
</RelativeLayout>
