<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.radin.LoginActivity" >

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:lines="1"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/login" />

    <TextView
        android:id="@+id/RadinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/radin_title"
        android:textSize="100sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
         android:singleLine="true"
        android:lines="1"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_toRightOf="@id/password"
        android:text="@string/login" />

    <Button
        android:id="@+id/creatAcountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/create_account" />

</RelativeLayout>